--- a/ITBees.Interfaces/ITBees.Interfaces.csproj
+++ b/ITBees.Interfaces/ITBees.Interfaces.csproj
@@ -5,4 +5,8 @@
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Modules\" />
+  </ItemGroup>
+
 </Project>
