--- a/ITBees.Interfaces/ITBees.Interfaces.csproj
+++ b/ITBees.Interfaces/ITBees.Interfaces.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -7,6 +7,10 @@
 
   <ItemGroup>
     <Folder Include="Modules\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="ITBees.Models" Version="5.0.14" />
   </ItemGroup>
 
 </Project>
