--- a/ITBees.Interfaces/ITBees.Interfaces.csproj
+++ b/ITBees.Interfaces/ITBees.Interfaces.csproj
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="ITBees.Models" Version="8.0.64" />
+    <ProjectReference Include="..\..\ITBees.Models\ITBees.Models\ITBees.Models.csproj" />
   </ItemGroup>
 
 </Project>
