add project references in csproj for debug

--- a/ITBees.Interfaces/ITBees.Interfaces.csproj
+++ b/ITBees.Interfaces/ITBees.Interfaces.csproj
@@ -8,9 +8,13 @@
   <ItemGroup>
     <Folder Include="Modules\" />
   </ItemGroup>
-
+  
   <ItemGroup>
     <PackageReference Include="ITBees.Models" Version="8.0.66" />
   </ItemGroup>
+  
+<!--  <ItemGroup>-->
+<!--    <ProjectReference Include="..\..\ITBees.Models\ITBees.Models\ITBees.Models.csproj" />-->
+<!--  </ItemGroup>-->
 
 </Project>
