--- a/ITBees.Interfaces/ITBees.Interfaces.csproj
+++ b/ITBees.Interfaces/ITBees.Interfaces.csproj
@@ -10,7 +10,8 @@
   </ItemGroup>
   
   <ItemGroup>
-    <PackageReference Include="ITBees.Models" Version="8.0.82" />
+    <PackageReference Include="ITBees.Models" Version="8.0.83" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.4" />
   </ItemGroup>
   
 <!--  <ItemGroup>-->
